--- a/css/main.css
+++ b/css/main.css
@@ -37,19 +37,45 @@
 
 --------------------------------------------------------------*/
 
+* {
+	font-family: 'Montserrat', sans-serif;
+}
+
 /*--------------------------------------------------------------
 3.0 - GENERIC
 -------------------------------------------------------------- */
 
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	box-sizing: border-box;
-	font-family: 'Open Sans', sans-serif;
+html {
+	font-size: 1rem;
+	scroll-behavior: smooth;
 }
 
+@media only screen and (min-width: 768px) {
+	html {
+		font-size: 1rem;
+	}
+}
+
+@media only screen and (min-width: 1024px) {
+	html {
+		font-size: 1rem;
+	}
+}
+
+/*--------------------------------------------------------------
+4.0 - ELEMENTS
+-------------------------------------------------------------- */
+
+/* -- TYPOGRAPHY -- */ 
+
+
+@media only screen and (min-width: 768px) {
+	
+}
+
+@media only screen and (min-width: 1024px) {
+	
+}
 
 /*--------------------------------------------------------------
 5.0 - OBJECTS
@@ -57,126 +83,10 @@
 
 /* -- FRAMEWORK -- */ 
 
-.wrapper {
-	margin: 0 auto;
-	width: 1140px;
-}
 
-.row {
-	overflow: auto;
-}
-
-.col-1-3 {
-	width: 245px;
-}
-
-.row .col-1-3, h1 {
-	float: left;
-}
 
 /*--------------------------------------------------------------
 6.0 - COMPONENTS
 -------------------------------------------------------------- */
 
 /* -- HEADER -- */
-
-h2 {
-	color: #556B72;
-	font-size: 16px;
-	font-weight: 400;
-	text-transform: uppercase;
-}
-
-h2 b {
-	font-size: 24px;
-	font-weight: 900;
-}
-
-
-/* -- NAVIGATION -- */ 
-
-header h1+nav {
-	float: right;
-}
-
-header h1+nav ul {
-	border-bottom: 1px solid #E1E9F2;
-	border-top: 1px solid #E1E9F2;
-	margin: 21.44px 0;
-	padding: 15px 0;
-	vertical-align: middle;
-}
-
-header h1+nav li {
-	border-left: 1px solid #E1E9F2;
-	padding: 0 15px;
-}
-
-header h1+nav li:first-child {
-	border: none;
-}
-
-header h1+nav a {
-	color: #9BA4B0;
-	text-decoration: none;
-}
-
-header div nav {
-	text-align: right;
-}
-
-header>nav ul {
-	margin: 10px 0 20px 0;
-	padding: 0;
-}
-
-header nav li {
-	display: inline-block;
-}
-
-header>nav a {
-	color: #FFF;
-	background-color: #FF8261;
-	font-size: 12px;
-	padding: 20px 27px;
-	text-decoration: none;
-	text-transform: uppercase;
-}
-
-header>nav a:hover {
-	background-color: #52CBF8;
-}
-
-
-/*--------------------------------------------------------------
-7.0 - UTILITIES
--------------------------------------------------------------- */
-
-#hero {
-	background: url("../img/hero.jpg") no-repeat center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-ms-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	padding: 333px 0 166px;
-}
-
-#hero p {
-	color: #FFF;
-	font-size: 60px;
-	font-weight: 900;
-	line-height: 40px;
-	text-align: center;
-	text-transform: uppercase;
-}
-
-#hero p span {
-	font-size: 35px;
-	font-weight: 300;
-}
-
-#domain {
-	background-color: #E7F4F8;
-}
-
