HTML Edit and Smooth Scroll
Edited HTML and added javascript for smooth scroll.

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@
 
 html {
 	font-size: 1rem;
-	scroll-behavior: smooth;
 }
 
 @media only screen and (min-width: 768px) {
@@ -63,23 +62,11 @@ html {
 	}
 }
 
-#dk-blue-bg {
-	background-color: #002C5B;
-}
+
 
 /*--------------------------------------------------------------
 4.0 - ELEMENTS
 -------------------------------------------------------------- */
-
-/* -- LISTS -- */ 
-
-.social li, header nav li {
-	display: inline-block;
-}
-
-.social {
-	padding: 0;
-}
 
 /* -- TYPOGRAPHY -- */ 
 
@@ -109,7 +96,7 @@ html {
 .btn {
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
-	padding: 1.5rem 3rem;
+	padding: 1.5em 3rem;
 	text-decoration: none;
 	font-size: 1rem;
 	font-weight: 700;
@@ -136,7 +123,7 @@ html {
 	-ms-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	padding: 1em;
+	padding: 1rem;
 }
 
 #hero > div > p:first-child {
@@ -144,15 +131,26 @@ html {
 }
 
 #hero > div > p:nth-child(2) {
-	font-size: 5em;
+	font-size: 5rem;
 	font-weight: 900;
-	margin: 2rem 0;
+	margin: 2em 0;
 }
 
 /* -- NAVAGATION -- */
 
+/* -- LAYOUT -- */
 
+.social li, header nav li {
+	display: inline-block;
+}
 
+.social {
+	padding: 0;
+}
+
+#dk-blue-bg {
+	background-color: #002C5B;
+}
 
 /*--------------------------------------------------------------
 7.0 - UTILITIES
